--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -10,7 +10,7 @@
 
 @media (max-width: 769px) {
     .info-section {
-        height: calc(100% - 60px) !important;
+        height: 90% !important;
     }
     .mat-toolbar {
         white-space: pre-line !important;
