--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -11,7 +11,7 @@
 
                 <ng-container matColumnDef="adultsCount">
                     <th mat-header-cell *matHeaderCellDef>{{'common.adultsCount' | translate}}</th>
-                    <td mat-cell *matCellDef="let element">{{ element.adultsCount }}</td>
+                    <td mat-cell *matCellDef="let element">{{ element.adultsCount + 1 }}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="childrenCount">
@@ -51,7 +51,7 @@
                 <ng-container matColumnDef="totalCost">
                     <th mat-header-cell *matHeaderCellDef>{{'common.totalCost' | translate}}</th>
                     <td mat-cell *matCellDef="let element">
-                        {{reservationPrice * (1 + element.adultsCount + element.childrenCount) }}
+                        {{element.totalCost}}
                     </td>
                 </ng-container>
 
@@ -63,7 +63,7 @@
                 <ng-container matColumnDef="remaining">
                     <th mat-header-cell *matHeaderCellDef>{{'common.remaining' | translate}}</th>
                     <td mat-cell *matCellDef="let element">
-                        {{ (reservationPrice * (1 + element.adultsCount + element.childrenCount)) - element.paid }}
+                        {{ element.totalCost - element.paid }}
                     </td>
                 </ng-container>
 
