--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -23,7 +23,7 @@
 
 .active-link {
     .mat-mdc-list-item {
-        background-color: #3f51b5;
+        background-color: #8e1212;
     }
     ::ng-deep {
         .mat-mdc-list-item-unscoped-content {
@@ -44,7 +44,7 @@
 }
 
 .active-lang {
-    background-color: #3f51b5;
+    background-color: #8e1212;
     color: #fff;
 }
 
