--- a/src/app/admin/reservation/reservation.component.html
+++ b/src/app/admin/reservation/reservation.component.html
@@ -137,7 +137,7 @@
                                 {{'validations.arabicLettersOnly' | translate}}
                             </mat-error>
                         </mat-form-field>
-                        <mat-form-field *ngIf="!isChild(i)" class="col-md-6 col-12 px-md-2 px-0">
+                        <mat-form-field class="col-md-6 col-12 px-md-2 px-0">
                             <mat-label>{{'home.englishMobileNumber' | translate}}</mat-label>
                             <input type="text" matInput formControlName="mobile" inputmode="numeric">
                             <mat-error *ngIf="participant.get('mobile')!.hasError('required')">
