--- a/src/styles.scss
+++ b/src/styles.scss
@@ -185,16 +185,47 @@ button:focus {
   }
 }
 
+.mat-mdc-unelevated-button.mat-primary {
+  --mdc-filled-button-container-color: #8e1212 !important;
+}
+
+.mat-mdc-raised-button.mat-primary {
+  --mdc-protected-button-container-color: #8e1212 !important;
+}
+
 .primary {
-  color: #3f51b5 !important;
+  color: #8e1212 !important;
 }
 
 .mat-toolbar.mat-primary {
-  background: #000000 !important;
+  background: #8e1212 !important;
+}
+
+.mat-mdc-tab:not(.mat-mdc-tab-disabled) .mdc-tab-indicator__content--underline, .mat-mdc-tab-link:not(.mat-mdc-tab-disabled) .mdc-tab-indicator__content--underline {
+  border-color: var(--mdc-tab-indicator-active-indicator-color, #8e1212);
+}
+
+.mat-mdc-tab:not(.mat-mdc-tab-disabled).mdc-tab--active .mdc-tab__text-label, .mat-mdc-tab-link:not(.mat-mdc-tab-disabled).mdc-tab--active .mdc-tab__text-label {
+  color: #8e1212;
+}
+
+.mat-mdc-radio-button.mat-primary {
+  --mdc-radio-disabled-selected-icon-color: #000;
+  --mdc-radio-disabled-unselected-icon-color: #000;
+  --mdc-radio-unselected-focus-icon-color: #212121;
+  --mdc-radio-unselected-hover-icon-color: #212121;
+  --mdc-radio-unselected-icon-color: rgba(0, 0, 0, 0.54);
+  --mdc-radio-unselected-pressed-icon-color: rgba(0, 0, 0, 0.54);
+  --mdc-radio-selected-focus-icon-color: #8e1212;
+  --mdc-radio-selected-hover-icon-color: #8e1212;
+  --mdc-radio-selected-icon-color: #8e1212;
+  --mdc-radio-selected-pressed-icon-color: #8e1212;
+  --mat-mdc-radio-ripple-color: #000;
+  --mat-mdc-radio-checked-ripple-color: #8e1212;
 }
 
 .total {
-  color: #3f51b5;
+  color: #8e1212;
   cursor: pointer;
   &:hover {
     text-decoration: underline;
