--- a/src/app/admin/all-subscription/all-subscription.component.html
+++ b/src/app/admin/all-subscription/all-subscription.component.html
@@ -1,7 +1,64 @@
-<div class="container-fluid table-container">
-    <div *ngIf="dataSource.data.length > 0; else emptyData" class="mat-elevation-z8 mt-3">
+<div class="container-fluid table-container" [class.px-0]="isMobileView">
+    <div *ngIf="dataSource.data.length > 0; else emptyData" class="mat-elevation-z8" [class.mt-3]="!isMobileView">
       <div class="table-content">
         <table mat-table [dataSource]="dataSource" matSort matSortActive="name">
+
+          <ng-container matColumnDef="mobileView">
+            <th mat-header-cell *matHeaderCellDef>
+              {{'common.total' | translate}}:  {{total}}
+            </th>
+            <td mat-cell *matCellDef="let element" class="py-2">
+              <div class="d-flex justify-content-between align-items-start">
+                <div>
+                  <div><b>{{'common.name' | translate}}:</b> {{element.name}}</div>
+                  <div><b>{{'common.mobile' | translate}}:</b> {{ element.mobile }}</div>
+                  <div><b>{{'common.birthDate' | translate}}:</b> {{ element.birthDate.toMillis() | date }}</div>
+                  <div class="d-flex flex-row">
+                    <b>{{'common.gender' | translate}}:</b>&nbsp;
+                    <ng-container [ngSwitch]="element.gender">
+                      <div *ngSwitchCase="1">
+                        {{ 'common.male' | translate }}
+                      </div>
+                      <div *ngSwitchDefault>
+                        {{ 'common.female' | translate }}
+                      </div>
+                    </ng-container>
+                  </div>
+                  <div><b>{{'menu.address' | translate}}:</b> {{element.address}}</div>
+                  <div><b>{{'common.age' | translate}}:</b> {{element.age}}</div>
+                  <div class="d-flex">
+                    <b>{{'common.room' | translate}}:</b>&nbsp;
+                    <ng-container *ngIf="element.room; else empty">
+                      {{ element.room }}
+                    </ng-container>
+                    <ng-template #empty>---</ng-template>
+                  </div>
+                </div>
+                <div class="d-flex justify-content-between flex-column">
+                  <span class="mx-2">
+                    <mat-icon *ngIf="element.isChild" color="primary">child_care</mat-icon>
+                    <mat-icon *ngIf="element.isMain" color="primary">star</mat-icon>
+                  </span> 
+                  <ng-container [ngSwitch]="element.bookingStatus">
+                    <div *ngSwitchCase="2">
+                      <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
+                    </div>
+                    <div *ngSwitchCase="3">
+                      <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
+                    </div>
+                    <div *ngSwitchCase="4">
+                      <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
+                    </div>
+                    <div *ngSwitchDefault>
+                      <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
+                    </div>
+                  </ng-container>
+                </div>
+              </div>
+              
+            </td>
+          </ng-container>
+
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>{{'common.name' | translate}}</th>
             <td mat-cell *matCellDef="let element" class="col-2">
@@ -17,7 +74,14 @@
       
           <ng-container matColumnDef="mobile">
             <th mat-header-cell *matHeaderCellDef>{{'common.mobile' | translate}}</th>
-            <td mat-cell *matCellDef="let element" class="col-2">{{ element.mobile }}</td>
+            <td mat-cell *matCellDef="let element" class="width-135">{{ element.mobile }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="birthDate">
+            <th mat-header-cell *matHeaderCellDef>{{'common.birthDate' | translate}}</th>
+            <td mat-cell *matCellDef="let element" class="width-135">
+              {{ element.birthDate.toMillis() | date }}
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="gender">
@@ -33,12 +97,10 @@
               </ng-container>
             </td>
           </ng-container>
-
-          <ng-container matColumnDef="birthDate">
-            <th mat-header-cell *matHeaderCellDef>{{'common.birthDate' | translate}}</th>
-            <td mat-cell *matCellDef="let element" class="col-2">
-              {{ element.birthDate.toMillis() | date }}
-            </td>
+          
+          <ng-container matColumnDef="address">
+            <th mat-header-cell *matHeaderCellDef>{{'menu.address' | translate}}</th>
+            <td mat-cell *matCellDef="let element" class="col-1">{{element.address}}</td>
           </ng-container>
 
           <ng-container matColumnDef="age">
@@ -80,7 +142,7 @@
         </table>
       </div>
 
-      <div class="d-flex justify-content-start p-3">
+      <div *ngIf="!isMobileView" class="d-flex justify-content-start p-3">
        {{'common.total' | translate}}:  {{total}}
       </div>
     </div>
