--- a/src/app/admin/primary/cost-details/cost-details.component.html
+++ b/src/app/admin/primary/cost-details/cost-details.component.html
@@ -5,16 +5,50 @@
     </button>
 </div>
 <div mat-dialog-content>
-    <div class="container-fluid table-container p-1">
+    <div class="container-fluid table-container" [ngClass]="isMobileView ? 'px-0' : 'p-1'">
         <div *ngIf="dataSource.data.length > 0" class="mat-elevation-z8">
             <div class="table-content">
                 <table mat-table [dataSource]="dataSource" matSort matSortActive="name">
+
+                    <ng-container matColumnDef="mobileView">
+                        <th mat-header-cell *matHeaderCellDef>
+                            {{'common.total' | translate}}:  {{total}}
+                        </th>
+                        <td mat-cell *matCellDef="let element" class="py-2">
+                            <div class="d-flex flex-column">
+                                <div> <b>{{'common.name' | translate}}:</b> {{element.name}}</div>
+                                <div> <b>{{'common.reservationPrice' | translate}}:</b> {{element.reservationPrice}}</div>
+                                <div> <b>{{'common.bedPrice' | translate}}:</b> {{element.bedPrice}}</div>
+                                <div> <b>{{'common.transportPrice' | translate}}:</b> {{element.transportPrice}}</div>
+                                <div class="d-flex align-items-center">
+                                    <b>{{'common.needBed' | translate}}:</b>&nbsp;
+                                    <ng-container *ngIf="element.needBed; else unCheck">
+                                        <i class="fa-solid fa-square-check text-success"></i>
+                                    </ng-container>
+                                </div>
+                                <div class="d-flex align-items-center">
+                                    <b>{{'common.privateTransport' | translate}}:</b>&nbsp;
+                                    <ng-container *ngIf="element.privateTransport; else unCheck">
+                                        <i class="fa-solid fa-square-check text-success"></i>
+                                    </ng-container>
+                                </div>
+                                <div class="d-flex align-items-center">
+                                    <b>{{'common.isChild' | translate}}:</b>&nbsp;
+                                    <ng-container *ngIf="element.isChild; else unCheck">
+                                        <i class="fa-solid fa-square-check text-success"></i>
+                                    </ng-container>
+                                </div>
+                            </div>
+                        </td>
+                    </ng-container>
+
                     <ng-container matColumnDef="name">
                         <th mat-header-cell *matHeaderCellDef>{{'common.name' | translate}}</th>
                         <td mat-cell *matCellDef="let element">
                             <div class="d-flex">
                                 <div>{{element.name}}</div>
                                 <mat-icon *ngIf="element.isMain" color="primary" class="mx-2">star</mat-icon>
+                                <mat-icon *ngIf="element.isChild" color="primary" class="mx-2">child_care</mat-icon>
                             </div>
                         </td>
                     </ng-container>
@@ -67,7 +101,7 @@
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                 </table>
             </div>
-            <div class="d-flex justify-content-start p-3">
+            <div *ngIf="!isMobileView" class="d-flex justify-content-start p-3">
                 {{'common.totalCost' | translate}}: {{total}}
             </div>
         </div>
