--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -1,7 +1,77 @@
-<div class="container-fluid table-container">
-    <div *ngIf="dataSource.data.length > 0; else emptyData" class="mat-elevation-z8 mt-3">
+<div class="container-fluid table-container" [class.px-0]="isMobileView">
+    <div *ngIf="dataSource.data.length > 0; else emptyData" class="mat-elevation-z8" [class.mt-3]="!isMobileView">
         <div class="table-content">
             <table mat-table [dataSource]="dataSource" matSort matSortActive="name">
+
+                <ng-container matColumnDef="mobileView">
+                    <th mat-header-cell *matHeaderCellDef>
+                        {{'common.total' | translate}}:  {{total}}
+                    </th>
+                    <td mat-cell *matCellDef="let element" class="py-2">
+                        <div class="d-flex justify-content-between align-items-start"> 
+                            <div class="d-flex flex-column">
+                                <div><b>{{'common.name' | translate}}:</b> {{element.name}}</div>
+                                <div> <b>{{'common.adultsCount' | translate}}:</b> {{element.adultsCount + 1}}</div>
+                                <div> <b>{{'common.childrenCount' | translate}}:</b> {{element.childrenCount}}</div>
+                                <div class="d-flex"> 
+                                    <b>{{'common.room' | translate}}:</b>&nbsp;
+                                    <ng-container *ngIf="element.room; else empty">
+                                        {{ element.room }}
+                                    </ng-container>
+                                    <ng-template #empty>---</ng-template>
+                                </div>
+                                <div class="d-flex">
+                                    <b>{{'common.bookingType' | translate}}:</b> &nbsp;
+                                    <ng-container [ngSwitch]="element.bookingType">
+                                        <div *ngSwitchCase="1">
+                                            {{ 'common.individual' | translate }}
+                                        </div>
+                                        <div *ngSwitchDefault>
+                                            {{ 'common.group' | translate }}
+                                        </div>
+                                    </ng-container>
+                                </div>
+                                <div> <b>{{'common.bookingDate' | translate}}:</b> {{element.bookingDate.toMillis() | date}}</div>
+                                <div> <b>{{'common.totalCost' | translate}}:</b>
+                                    <a (click)="viewCostDetails(element)" class="total">
+                                        {{element.totalCost}}
+                                    </a>
+                                </div>
+                                <div> <b>{{'common.paid' | translate}}:</b> {{element.paid}}</div>
+                                <div> <b>{{'common.remaining' | translate}}:</b>  {{ element.totalCost - element.paid }}</div>
+                                <div> <b>{{'common.notes' | translate}}:</b>  {{ element.userNotes }}</div>
+                            </div>
+                            <div class="d-flex flex-column-reverse">
+                                <ng-container [ngSwitch]="element.bookingStatus">
+                                    <div *ngSwitchCase="2">
+                                        <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
+                                    </div>
+                                    <div *ngSwitchCase="3">
+                                        <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}
+                                        </div>
+                                    </div>
+                                    <div *ngSwitchCase="4">
+                                        <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}
+                                        </div>
+                                    </div>
+                                    <div *ngSwitchDefault>
+                                        <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
+                                    </div>
+                                </ng-container>
+                                <div>
+                                    <button mat-icon-button color="primary" [matMenuTriggerFor]="menu">
+                                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    </button>
+                                    <mat-menu #menu="matMenu">
+                                        <button mat-menu-item class="primary" (click)="update(element)">{{'common.edit' | translate}}</button>
+                                        <button mat-menu-item class="text-danger" (click)="delete(element)">{{'common.delete' | translate}}</button>
+                                    </mat-menu>
+                                </div>
+                            </div>
+                        </div>
+                    </td>
+                </ng-container>
+
                 <ng-container matColumnDef="name">
                     <th mat-header-cell *matHeaderCellDef>{{'common.name' | translate}}</th>
                     <td mat-cell *matCellDef="let element">
@@ -134,7 +204,7 @@
             </table>
         </div>
 
-        <div class="d-flex justify-content-start p-3">
+        <div *ngIf="!isMobileView" class="d-flex justify-content-start p-3">
             {{'common.total' | translate}}: {{total}}
         </div>
     </div>
