--- a/src/app/admin/buses/buses.component.html
+++ b/src/app/admin/buses/buses.component.html
@@ -6,37 +6,34 @@
     </div>
   
     <div *ngIf="dataSource.data.length > 0; else emptyData" class="mat-elevation-z8">
-      <div class="table-content">
-        <table mat-table [dataSource]="dataSource">
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef>{{'common.name' | translate}}</th>
-            <td mat-cell *matCellDef="let element" class="col-3">{{element.name}}</td>
-          </ng-container>
-      
-          <ng-container matColumnDef="price">
-            <th mat-header-cell *matHeaderCellDef>{{'common.price' | translate}}</th>
-            <td mat-cell *matCellDef="let element" class="w-100">{{ element.price }}</td>
-          </ng-container>
-  
-          <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element">
-                <div class="d-flex">
-                    <button mat-icon-button color="primary" (click)="update(element)">
-                        <mat-icon>edit</mat-icon>
-                    </button>
-                    <button mat-icon-button color="warn" (click)="delete(element)">
-                        <mat-icon>delete</mat-icon>
-                    </button>
-                </div>
-            </td>
-          </ng-container>
-  
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-      </div>
-      
+      <table mat-table [dataSource]="dataSource">
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>{{'common.name' | translate}}</th>
+          <td mat-cell *matCellDef="let element" class="col-3">{{element.name}}</td>
+        </ng-container>
+    
+        <ng-container matColumnDef="price">
+          <th mat-header-cell *matHeaderCellDef>{{'common.price' | translate}}</th>
+          <td mat-cell *matCellDef="let element" class="w-100">{{ element.price }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">
+              <div class="d-flex">
+                  <button mat-icon-button color="primary" (click)="update(element)">
+                      <mat-icon>edit</mat-icon>
+                  </button>
+                  <button mat-icon-button color="warn" (click)="delete(element)">
+                      <mat-icon>delete</mat-icon>
+                  </button>
+              </div>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
       <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons [length]="dataSource.data.length"></mat-paginator>
     </div>
   </div>
