--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -1,6 +1,9 @@
 <div class="container-fluid table-container" [class.px-0]="isMobileView">
-    <div *ngIf="dataSource.data.length > 0; else emptyData" class="mat-elevation-z8" [class.mt-3]="!isMobileView">
-        <table mat-table [dataSource]="dataSource" matSort matSortActive="name">
+    <ng-container *ngIf="dataSource && dataSource.data.length < 1">
+        <app-empty-data></app-empty-data>
+    </ng-container>
+    <div [hidden]="dataSource && dataSource.data.length < 1" class="mat-elevation-z8" [class.mt-3]="!isMobileView">
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear="true">
 
             <ng-container matColumnDef="mobileView">
                 <th mat-header-cell *matHeaderCellDef>
@@ -72,34 +75,38 @@
             </ng-container>
 
             <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef>{{'common.name' | translate}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.name' | translate}}</th>
                 <td mat-cell *matCellDef="let element">
                     {{element.name}}         
                 </td>
+                <td mat-footer-cell *matFooterCellDef>{{'common.total' | translate}}: <b>{{total}}</b> </td>
             </ng-container>
 
             <ng-container matColumnDef="adultsCount">
-                <th mat-header-cell *matHeaderCellDef>{{'common.adultsCount' | translate}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.adultsCount' | translate}}</th>
                 <td mat-cell *matCellDef="let element">{{ element.adultsCount + 1 }}</td>
+                <td mat-footer-cell *matFooterCellDef> {{getAllAdultsCount()}} </td>
             </ng-container>
 
             <ng-container matColumnDef="childrenCount">
-                <th mat-header-cell *matHeaderCellDef>{{'common.childrenCount' | translate}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.childrenCount' | translate}}</th>
                 <td mat-cell *matCellDef="let element">{{ element.childrenCount }}</td>
+                <td mat-footer-cell *matFooterCellDef> {{getAllChildrenCount()}} </td>
             </ng-container>
 
             <ng-container matColumnDef="roomId">
-                <th mat-header-cell *matHeaderCellDef>{{'common.room' | translate}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.room' | translate}}</th>
                 <td mat-cell *matCellDef="let element">
                     <ng-container *ngIf="element.room; else empty">
                         {{ element.room }}
                     </ng-container>
                     <ng-template #empty>---</ng-template>
                 </td>
+                <td mat-footer-cell *matFooterCellDef></td>
             </ng-container>
 
             <ng-container matColumnDef="bookingType">
-                <th mat-header-cell *matHeaderCellDef>{{'common.bookingType' | translate}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.bookingType' | translate}}</th>
                 <td mat-cell *matCellDef="let element">
                     <ng-container [ngSwitch]="element.bookingType">
                         <div *ngSwitchCase="1">
@@ -110,36 +117,41 @@
                         </div>
                     </ng-container>
                 </td>
+                <td mat-footer-cell *matFooterCellDef></td>
             </ng-container>
 
             <ng-container matColumnDef="bookingDate">
-                <th mat-header-cell *matHeaderCellDef>{{'common.bookingDate' | translate}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.bookingDate' | translate}}</th>
                 <td mat-cell *matCellDef="let element">{{ element.bookingDate.toMillis() | date }}</td>
+                <td mat-footer-cell *matFooterCellDef></td>
             </ng-container>
 
             <ng-container matColumnDef="totalCost">
-                <th mat-header-cell *matHeaderCellDef>{{'common.totalCost' | translate}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.totalCost' | translate}}</th>
                 <td mat-cell *matCellDef="let element">
                     <a (click)="viewCostDetails(element)" class="total">
                         {{element.totalCost}}
                     </a>
                 </td>
+                <td mat-footer-cell *matFooterCellDef> {{getAllTotalCost()}} </td>
             </ng-container>
 
             <ng-container matColumnDef="paid">
-                <th mat-header-cell *matHeaderCellDef>{{'common.paid' | translate}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.paid' | translate}}</th>
                 <td mat-cell *matCellDef="let element">{{element.paid}}</td>
+                <td mat-footer-cell *matFooterCellDef> {{ getAllPaid() }} </td>
             </ng-container>
 
             <ng-container matColumnDef="remaining">
-                <th mat-header-cell *matHeaderCellDef>{{'common.remaining' | translate}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.remaining' | translate}}</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.totalCost - element.paid }}
                 </td>
+                <td mat-footer-cell *matFooterCellDef> {{getAllRemaining()}} </td>
             </ng-container>
 
             <ng-container matColumnDef="bookingStatus">
-                <th mat-header-cell *matHeaderCellDef>{{'common.bookingStatus' | translate}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.bookingStatus' | translate}}</th>
                 <td mat-cell *matCellDef="let element">
                     <ng-container [ngSwitch]="element.bookingStatus">
                         <div *ngSwitchCase="2">
@@ -158,15 +170,17 @@
                         </div>
                     </ng-container>
                 </td>
+                <td mat-footer-cell *matFooterCellDef></td>
             </ng-container>
 
             <ng-container matColumnDef="userNotes">
-                <th mat-header-cell *matHeaderCellDef>{{'common.notes' | translate}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.notes' | translate}}</th>
                 <td mat-cell *matCellDef="let element">{{element.userNotes}}</td>
+                <td mat-footer-cell *matFooterCellDef></td>
             </ng-container>
 
             <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef>{{'common.bookingStatus' | translate}}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.bookingStatus' | translate}}</th>
                 <td mat-cell *matCellDef="let element">
                     <ng-container [ngSwitch]="element.bookingStatus">
                         <div *ngSwitchCase="2">
@@ -185,6 +199,7 @@
                         </div>
                     </ng-container>
                 </td>
+                <td mat-footer-cell *matFooterCellDef></td>
             </ng-container>
             <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef></th>
@@ -197,16 +212,11 @@
                         <button mat-menu-item class="text-danger" (click)="delete(element)">{{'common.delete' | translate}}</button>
                     </mat-menu>
                 </td>
+                <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
         </table>
-        <div *ngIf="!isMobileView" class="d-flex justify-content-start p-3">
-            {{'common.total' | translate}}: {{total}}
-        </div>
     </div>
 </div>
-
-<ng-template #emptyData>
-    <app-empty-data></app-empty-data>
-</ng-template>
