--- a/src/app/admin/all-subscription/all-subscription.component.html
+++ b/src/app/admin/all-subscription/all-subscription.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid table-container" [class.px-0]="isMobileView">
-  <div *ngIf="!isMobileView" class="d-flex justify-content-start py-3">
+  <div *ngIf="!isMobileView && dataSource && dataSource.data.length > 0" class="d-flex justify-content-start py-3">
     {{'common.total' | translate}}: <b>{{total}}</b>
   </div>
-  <ng-container *ngIf="dataSource && dataSource.data.length < 1">
+  <div *ngIf="dataSource && dataSource.data.length < 1" class="mt-3">
     <app-empty-data></app-empty-data>
-  </ng-container>
+  </div>
   <div [hidden]="dataSource && dataSource.data.length < 1" class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc"
       matSortDisableClear="true">
@@ -66,7 +66,7 @@
       </ng-container>
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.name' | translate}}</th>
-        <td mat-cell *matCellDef="let element" class="col-2">
+        <td mat-cell *matCellDef="let element" class="col-3">
           <div class="d-flex">
             <div>{{element.name}}</div>
             <div class="px-2">
