--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -1,8 +1,14 @@
 <div class="container-fluid table-container" [class.px-0]="isMobileView">
-    <div *ngIf="dataSource && dataSource.data.length < 1" class="mt-3">
+    <form [formGroup]="form" novalidate class="row pt-3 mx-0 d-flex align-items-center">
+        <mat-form-field class="col-lg-3 col-12 px-lg-0 px-2" floatLabel="always">
+            <mat-label>{{'common.searchByNameOrMobile' | translate}}</mat-label>
+            <input type="search" matInput formControlName="searchText" inputmode="search" (ngModelChange)="filter($event)">
+        </mat-form-field>
+    </form>
+    <div *ngIf="dataSource && dataSource.data.length < 1">
         <app-empty-data></app-empty-data>
     </div>
-    <div [hidden]="dataSource && dataSource.data.length < 1" class="mat-elevation-z8" [class.mt-3]="!isMobileView">
+    <div [hidden]="dataSource && dataSource.data.length < 1" class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc"
             matSortDisableClear="true">
             <ng-container matColumnDef="mobileView">
@@ -13,8 +19,9 @@
                     <div class="d-flex justify-content-between align-items-start">
                         <div class="d-flex flex-column">
                             <div><b>{{'common.name' | translate}}:</b> {{element.name}}</div>
-                            <div> <b>{{'common.adultsCount' | translate}}:</b> {{element.adultsCount + 1}}</div>
-                            <div> <b>{{'common.childrenCount' | translate}}:</b> {{element.childrenCount}}</div>
+                            <div><b>{{'common.mobile' | translate}}:</b> {{element.mobile}}</div>
+                            <div><b>{{'common.adultsCount' | translate}}:</b> {{element.adultsCount + 1}}</div>
+                            <div><b>{{'common.childrenCount' | translate}}:</b> {{element.childrenCount}}</div>
                             <div class="d-flex">
                                 <b>{{'common.room' | translate}}:</b>&nbsp;
                                 <ng-container *ngIf="element.room; else empty">
@@ -33,7 +40,7 @@
                                     </div>
                                 </ng-container>
                             </div>
-                            <div> <b>{{'common.bookingDate' | translate}}:</b> {{element.bookingDate.toMillis() | date}}
+                            <div> <b>{{'common.bookingDate' | translate}}:</b> {{element.bookingDate.toMillis() | date:'medium'}}
                             </div>
                             <div> <b>{{'common.totalCost' | translate}}:</b>
                                 <a (click)="viewCostDetails(element)" class="total">
@@ -43,7 +50,11 @@
                             <div> <b>{{'common.paid' | translate}}:</b> {{element.paid}}</div>
                             <div> <b>{{'common.remaining' | translate}}:</b> {{ element.totalCost - element.paid }}
                             </div>
-                            <div> <b>{{'common.notes' | translate}}:</b> {{ element.userNotes }}</div>
+                            <div> <b>{{'common.notes' | translate}}:</b>
+                                <ng-container *ngIf="element.userNotes; else empty">
+                                    {{element.userNotes}}
+                                </ng-container>
+                            </div>
                         </div>
                         <div class="d-flex flex-column-reverse">
                             <ng-container [ngSwitch]="element.bookingStatus">
@@ -84,10 +95,18 @@
 
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.name' | translate}}</th>
-                <td mat-cell *matCellDef="let element">
+                <td mat-cell *matCellDef="let element" class="width-135">
                     {{element.name}}
                 </td>
                 <td mat-footer-cell *matFooterCellDef>{{'common.total' | translate}}: <b>{{total}}</b> </td>
+            </ng-container>
+
+            <ng-container matColumnDef="mobile">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.mobile' | translate}}</th>
+                <td mat-cell *matCellDef="let element">
+                    {{element.mobile}}
+                </td>
+                <td mat-footer-cell *matFooterCellDef></td>
             </ng-container>
 
             <ng-container matColumnDef="adultsCount">
@@ -108,7 +127,6 @@
                     <ng-container *ngIf="element.room; else empty">
                         {{ element.room }}
                     </ng-container>
-                    <ng-template #empty>---</ng-template>
                 </td>
                 <td mat-footer-cell *matFooterCellDef></td>
             </ng-container>
@@ -130,7 +148,7 @@
 
             <ng-container matColumnDef="bookingDate">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.bookingDate' | translate}}</th>
-                <td mat-cell *matCellDef="let element">{{ element.bookingDate.toMillis() | date }}</td>
+                <td mat-cell *matCellDef="let element" class="width-135">{{ element.bookingDate.toMillis() | date:'medium' }}</td>
                 <td mat-footer-cell *matFooterCellDef></td>
             </ng-container>
 
@@ -183,7 +201,11 @@
 
             <ng-container matColumnDef="userNotes">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.notes' | translate}}</th>
-                <td mat-cell *matCellDef="let element">{{element.userNotes}}</td>
+                <td mat-cell *matCellDef="let element" class="width-100 text-truncate" [matTooltip]="element.userNotes" matTooltipPosition="above">
+                    <ng-container *ngIf="element.userNotes; else empty">
+                        {{element.userNotes}}
+                    </ng-container>
+                </td>
                 <td mat-footer-cell *matFooterCellDef></td>
             </ng-container>
 
@@ -232,3 +254,7 @@
         </table>
     </div>
 </div>
+
+<ng-template #empty>
+    ---
+</ng-template>
