--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -233,7 +233,9 @@
             </ng-container>
 
             <ng-container matColumnDef="actions">
-                <th mat-header-cell *matHeaderCellDef></th>
+                <th mat-header-cell *matHeaderCellDef class="text-center">
+                    <a><i class="fa-solid fa-filter"></i></a>
+                </th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-icon-button color="primary" [matMenuTriggerFor]="menu">
                         <i class="fa-solid fa-ellipsis"></i>
