--- a/src/app/admin/all-subscription/all-subscription.component.html
+++ b/src/app/admin/all-subscription/all-subscription.component.html
@@ -1,149 +1,157 @@
 <div class="container-fluid table-container" [class.px-0]="isMobileView">
-  <div *ngIf="!isMobileView && dataSource && dataSource.data.length > 0" class="d-flex justify-content-start py-3">
-    {{'common.total' | translate}}: <b>{{total}}</b>
-  </div>
-  <div *ngIf="dataSource && dataSource.data.length < 1" class="mt-3">
-    <app-empty-data></app-empty-data>
-  </div>
-  <div [hidden]="dataSource && dataSource.data.length < 1" class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc"
-      matSortDisableClear="true">
-
-      <ng-container matColumnDef="mobileView">
-        <th mat-header-cell *matHeaderCellDef>
-          {{'common.total' | translate}}: {{total}}
-        </th>
-        <td mat-cell *matCellDef="let element" class="py-2">
-          <div class="d-flex justify-content-between align-items-start">
-            <div>
-              <div><b>{{'common.name' | translate}}:</b> {{element.name}}</div>
-              <div><b>{{'common.mobile' | translate}}:</b> {{ element.mobile }}</div>
-              <div><b>{{'common.birthDate' | translate}}:</b> {{ element.birthDate.toMillis() | date }}</div>
-              <div class="d-flex flex-row">
-                <b>{{'common.gender' | translate}}:</b>&nbsp;
-                <ng-container [ngSwitch]="element.gender">
-                  <div *ngSwitchCase="1">
-                    {{ 'common.male' | translate }}
+  <div class="mt-2">
+    <div *ngIf="dataSource && dataSource.data.length < 1">
+      <app-empty-data></app-empty-data>
+    </div>
+    <div [hidden]="dataSource && dataSource.data.length < 1" class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc"
+        matSortDisableClear="true">
+  
+        <ng-container matColumnDef="mobileView">
+          <th mat-header-cell *matHeaderCellDef>
+            {{'common.total' | translate}}: {{total}}
+          </th>
+          <td mat-cell *matCellDef="let element" class="py-2">
+            <div class="d-flex justify-content-between align-items-start">
+              <div>
+                <div><b>{{'common.name' | translate}}:</b> {{element.name}}</div>
+                <div><b>{{'common.mobile' | translate}}:</b> {{ element.mobile }}</div>
+                <div><b>{{'common.birthDate' | translate}}:</b> {{ element.birthDate.toMillis() | date }}</div>
+                <div class="d-flex flex-row">
+                  <b>{{'common.gender' | translate}}:</b>&nbsp;
+                  <ng-container [ngSwitch]="element.gender">
+                    <div *ngSwitchCase="1">
+                      {{ 'common.male' | translate }}
+                    </div>
+                    <div *ngSwitchDefault>
+                      {{ 'common.female' | translate }}
+                    </div>
+                  </ng-container>
+                </div>
+                <div><b>{{'menu.address' | translate}}:</b> {{element.address}}</div>
+                <div><b>{{'common.age' | translate}}:</b> {{element.age}}</div>
+                <div class="d-flex">
+                  <b>{{'common.room' | translate}}:</b>&nbsp;
+                  <ng-container *ngIf="element.room; else empty">
+                    {{ element.room }}
+                  </ng-container>
+                  <ng-template #empty>---</ng-template>
+                </div>
+              </div>
+              <div class="d-flex justify-content-between flex-column">
+                <span class="mx-2">
+                  <mat-icon *ngIf="element.isChild" color="primary">child_care</mat-icon>
+                  <mat-icon *ngIf="element.isMain" color="primary">star</mat-icon>
+                </span>
+                <ng-container [ngSwitch]="element.bookingStatus">
+                  <div *ngSwitchCase="2">
+                    <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
+                  </div>
+                  <div *ngSwitchCase="3">
+                    <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
+                  </div>
+                  <div *ngSwitchCase="4">
+                    <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
                   </div>
                   <div *ngSwitchDefault>
-                    {{ 'common.female' | translate }}
+                    <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
                   </div>
                 </ng-container>
               </div>
-              <div><b>{{'menu.address' | translate}}:</b> {{element.address}}</div>
-              <div><b>{{'common.age' | translate}}:</b> {{element.age}}</div>
-              <div class="d-flex">
-                <b>{{'common.room' | translate}}:</b>&nbsp;
-                <ng-container *ngIf="element.room; else empty">
-                  {{ element.room }}
-                </ng-container>
-                <ng-template #empty>---</ng-template>
-              </div>
             </div>
-            <div class="d-flex justify-content-between flex-column">
-              <span class="mx-2">
+  
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.name' | translate}}</th>
+          <td mat-cell *matCellDef="let element" class="col-3">
+            <div class="d-flex">
+              <div>{{element.name}}</div>
+              <div class="px-2">
                 <mat-icon *ngIf="element.isChild" color="primary">child_care</mat-icon>
                 <mat-icon *ngIf="element.isMain" color="primary">star</mat-icon>
-              </span>
-              <ng-container [ngSwitch]="element.bookingStatus">
-                <div *ngSwitchCase="2">
-                  <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
-                </div>
-                <div *ngSwitchCase="3">
-                  <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
-                </div>
-                <div *ngSwitchCase="4">
-                  <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
-                </div>
-                <div *ngSwitchDefault>
-                  <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
-                </div>
-              </ng-container>
+              </div>
             </div>
-          </div>
-
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.name' | translate}}</th>
-        <td mat-cell *matCellDef="let element" class="col-3">
-          <div class="d-flex">
-            <div>{{element.name}}</div>
-            <div class="px-2">
-              <mat-icon *ngIf="element.isChild" color="primary">child_care</mat-icon>
-              <mat-icon *ngIf="element.isMain" color="primary">star</mat-icon>
-            </div>
-          </div>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="mobile">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.mobile' | translate}}</th>
-        <td mat-cell *matCellDef="let element" class="width-135">{{ element.mobile }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="birthDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.birthDate' | translate}}</th>
-        <td mat-cell *matCellDef="let element" class="width-135">
-          {{ element.birthDate.toMillis() | date }}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="gender">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.gender' | translate}}</th>
-        <td mat-cell *matCellDef="let element" class="col-1">
-          <ng-container [ngSwitch]="element.gender">
-            <div *ngSwitchCase="1">
-              {{ 'common.male' | translate }}
-            </div>
-            <div *ngSwitchDefault>
-              {{ 'common.female' | translate }}
-            </div>
-          </ng-container>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="address">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'menu.address' | translate}}</th>
-        <td mat-cell *matCellDef="let element" class="col-1">{{element.address}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="age">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.age' | translate}}</th>
-        <td mat-cell *matCellDef="let element" class="col-1">{{element.age}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="room">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.room' | translate}}</th>
-        <td mat-cell *matCellDef="let element" class="col-3">
-          <ng-container *ngIf="element.room; else empty">
-            {{ element.room }}
-          </ng-container>
-          <ng-template #empty>---</ng-template>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.bookingStatus' | translate}}</th>
-        <td mat-cell *matCellDef="let element" class="col-1">
-          <ng-container [ngSwitch]="element.bookingStatus">
-            <div *ngSwitchCase="2">
-              <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
-            </div>
-            <div *ngSwitchCase="3">
-              <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
-            </div>
-            <div *ngSwitchCase="4">
-              <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
-            </div>
-            <div *ngSwitchDefault>
-              <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
-            </div>
-          </ng-container>
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+          </td>
+          <td mat-footer-cell *matFooterCellDef>{{'common.total' | translate}}: <b>{{total}}</b> </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="mobile">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.mobile' | translate}}</th>
+          <td mat-cell *matCellDef="let element" class="width-135">{{ element.mobile }}</td>
+          <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+  
+        <ng-container matColumnDef="birthDate">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.birthDate' | translate}}</th>
+          <td mat-cell *matCellDef="let element" class="width-135">
+            {{ element.birthDate.toMillis() | date }}
+          </td>
+          <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+  
+        <ng-container matColumnDef="gender">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.gender' | translate}}</th>
+          <td mat-cell *matCellDef="let element" class="col-1">
+            <ng-container [ngSwitch]="element.gender">
+              <div *ngSwitchCase="1">
+                {{ 'common.male' | translate }}
+              </div>
+              <div *ngSwitchDefault>
+                {{ 'common.female' | translate }}
+              </div>
+            </ng-container>
+          </td>
+          <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+  
+        <ng-container matColumnDef="address">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'menu.address' | translate}}</th>
+          <td mat-cell *matCellDef="let element" class="col-1">{{element.address}}</td>
+          <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+  
+        <ng-container matColumnDef="age">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.age' | translate}}</th>
+          <td mat-cell *matCellDef="let element" class="col-1">{{element.age}}</td>
+          <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+  
+        <ng-container matColumnDef="room">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.room' | translate}}</th>
+          <td mat-cell *matCellDef="let element" class="col-3">
+            <ng-container *ngIf="element.room; else empty">
+              {{ element.room }}
+            </ng-container>
+            <ng-template #empty>---</ng-template>
+          </td>
+          <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+  
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.bookingStatus' | translate}}</th>
+          <td mat-cell *matCellDef="let element" class="col-1">
+            <ng-container [ngSwitch]="element.bookingStatus">
+              <div *ngSwitchCase="2">
+                <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
+              </div>
+              <div *ngSwitchCase="3">
+                <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
+              </div>
+              <div *ngSwitchCase="4">
+                <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
+              </div>
+              <div *ngSwitchDefault>
+                <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
+              </div>
+            </ng-container>
+          </td>
+          <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
+      </table>
+    </div>
   </div>
 </div>
