--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -1,12 +1,6 @@
 <div class="container-fluid table-container" [class.px-0]="isMobileView">
-    <!-- <form [formGroup]="form" novalidate class="row pt-3 mx-0 d-flex align-items-center">
-        <mat-form-field class="col-lg-3 col-12 px-lg-0 px-2" floatLabel="always">
-            <mat-label>{{'common.searchByNameOrMobile' | translate}}</mat-label>
-            <input type="search" matInput formControlName="searchText" inputmode="search" (ngModelChange)="filter($event)">
-        </mat-form-field>
-    </form> -->
-    <div class="mt-2 w-100">
-        <div class="w-100 d-flex">
+    <div class="w-100" [ngClass]="isMobileView ? 'h-100' : 'mt-2'">
+        <div class="w-100 d-flex h-100">
             <div *ngIf="dataSource && dataSource.data.length < 1" class="w-100">
                 <app-empty-data></app-empty-data>
             </div>
@@ -15,7 +9,9 @@
                     matSortDisableClear="true">
                     <ng-container matColumnDef="mobileView">
                         <th mat-header-cell *matHeaderCellDef>
-                            {{'common.total' | translate}}: {{total}}
+                            <button mat-icon-button (click)="showAdvancedFilter()">
+                                <mat-icon>filter_list</mat-icon>
+                            </button>
                         </th>
                         <td mat-cell *matCellDef="let element" class="py-2">
                             <div class="d-flex justify-content-between align-items-start">
@@ -92,7 +88,7 @@
                                 </div>
                             </div>
                         </td>
-                        <td mat-footer-cell *matFooterCellDef></td>
+                        <td mat-footer-cell *matFooterCellDef>{{'common.total' | translate}}: <b>{{total}}</b> </td>
                     </ng-container>
         
                     <ng-container matColumnDef="name">
@@ -263,7 +259,12 @@
                 </table>
             </div>
             <div *ngIf="isAdvancedSearchOpened" class="advanced-filter">
-                <div class="header">{{ 'advancedFilter.advancedFilter' | translate }}</div>
+                <div class="header d-flex justify-content-between align-items-center">
+                    <div>{{ 'advancedFilter.advancedFilter' | translate }}</div>
+                    <button *ngIf="isMobileView" mat-icon-button (click)="showAdvancedFilter()">
+                        <mat-icon>close</mat-icon>
+                    </button>
+                </div>
                 <form [formGroup]="form" novalidate class="row mx-0 mt-3">
                     <div class="advanced-body w-100">
                         <mat-form-field class="col-12">
@@ -295,11 +296,11 @@
                             <input type="number" matInput formControlName="remaining" inputmode="numeric">
                         </mat-form-field>
                     </div>
-                    <div class="d-flex justify-content-around align-items-center w-100 border-top pt-3">
+                    <div class="d-flex justify-content-lg-around justify-content-end align-items-center w-100 border-top pt-3">
                         <button color="primary" mat-flat-button type="submit" cdkFocusInitial (click)="filter()">
                             <span> {{ 'advancedFilter.filter' | translate }}</span>
                         </button>
-                        <button color="primary" mat-stroked-button type="button" (click)="reset()">
+                        <button color="primary" mat-stroked-button type="button" (click)="reset()" [class.mx-3]="isMobileView">
                             <span> {{ 'advancedFilter.reset' | translate }}</span>
                         </button>
                     </div>
